<resources>
    <string name="app_name">FIS Remote Learning</string>
    <string name="powered_by_fis">Powered by FIS</string>
    <string name="copyright">©</string>
    <string name="sign_in">Sign In</string>
    <string name="empty" />
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="_0712345678">example: 0712345678</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next_page">Next page</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="this_section_is_optional_if_you_don_t_have_spouse_details_proceed_to_by_clicking_register_button">This section is optional, you can proceed to by clicking \'register\' button.</string>
    <string name="spouse_s_first_name">Spouse\'s first name</string>
    <string name="spouse_s_last_name">Spouse\'s last name</string>
    <string name="spouse_s_email_address">Spouse\'s email address</string>
    <string name="spouse_s_phone_number">Spouse\'s phone number</string>
    <string name="welcome_to">Welcome to</string>
    <string name="fis">FIS</string>
    <string name="remote_learning">Remote Learning</string>
    <string name="keep_track_of">Keep track of your child\'s progress with our remote learning classes for all our school sections.</string>
    <string name="i_m_a_new_parent">I\'m a new Parent</string>
    <string name="already_an_fis_parent">Already an FIS parent?</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="charles_wafula">Charles Wafula</string>
    <string name="active_student_profiles">Active student profiles</string>
    <string name="student_name">Student name</string>
    <string name="fname">Fname</string>
    <string name="add_profile">Add profile</string>
    <string name="in_active_student_profiles">In-active student profiles</string>
    <string name="verified">Verified</string>
    <string name="account_status">Account status</string>
    <string name="student_profile">Student profile</string>
    <string name="fees">Fees</string>
    <string name="payment_details">Payment details</string>
    <string name="student_diary">Student diary</string>
    <string name="click_back_again">click back again to exit</string>
    <string-array name="section_entries">
        <item>Self</item>
        <item>Spouse</item>
    </string-array>
    <string-array name="student_section_entries">
        <item>Details</item>
        <item>Payment</item>
    </string-array>
    <string name="status">status</string>
    <string name="school_details">School details</string>
    <string name="cancel_payment_plan">Cancel student subscription</string>
    <string name="balance">Balance</string>
    <string name="ksh">KSH</string>
    <string name="total_invoiced">Total invoiced</string>
    <string name="total_paid">Total paid</string>
    <string name="fees_statement">fees statement</string>
    <string name="lipa_na_mpesa">Lipa na Mpesa</string>
    <string name="transactions_log">Transactions log</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="previous_reports">Previous reports</string>
    <string name="no_reports_found">No reports found</string>
    <string name="student_level">Student level</string>
    <string name="register_student">Register Student</string>
    <string name="age">Student\'s DOB</string>
    <string name="payment_note">A payment of KES. 7000/= per student per month was agreed upon to facilitate internet access and paying the teachers involved.
        \n\nAfter payment std_name account will be activated and will gain access to all our services. NOTE: NON-FIS students will be subject to a small registration fee.
        \n\nA request to pay will be sent to the number you enter below.</string>
    <string name="choose_subsc">Payment package(s) per student per month were agreed upon to facilitate internet access and paying the teachers involved.
        \n\nKindly choose your preferred payment package for std_name below.</string>
    <string name="menu">Menu</string>
    <string name="my_profile">My Profile</string>
    <string name="report_issue">Report issue</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="full_names">Full names</string>
    <string name="parent_s_phone_number">Parent\'s phone number</string>
    <string name="preferences">Preferences</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="you_password_has_been_changed_successfully">Your password has been changed successfully.</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="upload_successful">Profile picture uploaded successfully</string>
    <string name="upload_failed">Profile picture upload failed. Try again.</string>
    <string name="failed_picture">Picture upload failed</string>
    <string name="profile_photo">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="phone_required">Phone number required.</string>
    <string name="phone_invalid_format">Phone number invalid format.</string>
    <string name="pass_required">Password required.</string>
    <string name="pass_too_short">Password is too short.</string>
    <string name="code_required">Please enter verification code.</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="hint_0712345678">example: 0712345678</string>
    <string name="required"> is empty.</string>
    <string name="gender">Gender</string>
    <string name="registering">Just a moment....</string>
    <string name="registration_success">Registration successful.</string>
    <string name="spouse_s_password">Spouse\'s password</string>
    <string name="network_error">Cannot connect to Internet…Please check your connection!</string>
    <string name="server_error">The server could not be found. Please try again after some time!!</string>
    <string name="auth_error">Authentication Failed, Please try again!</string>
    <string name="parse_error">Parsing error! Please try again after some time!!</string>
    <string name="timeout_error">Connection TimeOut! Please check your internet connection.</string>
    <string name="my_account">My Account</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="hello">Hello, </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good morning,</string>
    <string name="good_afternoon">Good afternoon,</string>
    <string name="good_evening">Good evening,</string>
    <string name="select_date">select date</string>
    <string name="middle_name">Middle name</string>
    <string name="student_registered">Student registered.</string>
    <string name="student_register_failed">Student registration failed.</string>
    <string name="complete_payment">Complete payment</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="online_credentials">Online Credentials</string>
    <string name="click_icon_to_view">(click icon to view)</string>
    <string name="psa_title">Account awaiting activation</string>
    <string name="psa_text">\'s account is yet to be activated, all registered profiles are subject to a thorough review by our team. This will take a few hours at most. We will notify you once this profile has been activated or otherwise.</string>
    <string name="your_account_is_still_under_review">Your account is still under review, Kindly check back after 24 hours. If you still can\'t access your account after the given time, kindly contact our help desk.</string>
    <string name="hello_your_account_is_under_review">Hello, your account is under review and you shall be notified once we\'re done. This may take up to 24 hours but if it takes longer than the specified time, kindly reach out to our help desk for assistance.</string>
    <string name="hello_your_account_iaap">\'s account has an outstanding fee balance. Failure to clear this balance within the next 3 days will result in suspension of this account.</string>
    <string name="hello_your_account_sap">\'s account has had an outstanding fee balance for over 5 days and has therefore been suspended. Pay full fees for account activation or contact administration.</string>
    <string name="hello_your_account_deac">\'s account has been deactivated, this may have been a per the parent\'s request or by the school. Kindly contact our help desk to activate this account again.</string>
    <string name="select_student_s_subscription">Select student\'s package</string>
    <string name="select_registration_type">Select registration type</string>
    <string name="total">Total : KSH </string>
    <string name="pending_fees_alert">Pending Fees Alert</string>
    <string name="account_suspended">Account Suspended</string>
    <string name="pay_now">Pay now</string>
    <string name="payment_for">Payment for:</string>
    <string name="payments">Payment: KSH </string>
    <string name="debit">Debit: KSH </string>
    <string name="date_paid">Date: </string>
    <string name="amount">Amount</string>
    <string name="send_money">Send Money</string>
    <string name="phone_empty">Enter phone number</string>
    <string name="amount_empty">Enter amount</string>
    <string name="phone_format">Invalid format(hint: 0712345678)</string>
    <string name="amount_format">Amount cannot be less than 1 ksh</string>
    <string name="account_deactivated">Account Deactivated</string>
    <string name="student_account_registered_complete">Student account registered. Please complete payment via Mpesa or visit us in order to activate this account otherwise this account will be deemed inactive</string>
    <string name="admission_no">Admission No</string>
    <string name="class_name">Class name</string>
    <string name="student_suid">Student SUID</string>
    <string name="not_set">Not Set</string>
    <string name="no_transactions_found">No transactions found. Slide down to refresh.</string>
    <string name="student_fees_statement">Student fees statement</string>
    <string name="scroll_left_right_up_down_to_view_full_statement">Scroll Left/Right/Up/Down to view full statement.</string>
    <string name="payment_only">Payment</string>
    <string name="debit_amount">Debit</string>
    <string name="platform">Platform:</string>
    <string name="username">Username:</string>
    <string name="pass">Password:</string>
</resources>