<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/sttDate"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@android:color/black"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/date"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sttDesc"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@android:color/black"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/description"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sttDebit"
        android:layout_width="124dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@android:color/black"
        android:text="@string/debit_amount"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sttCredit"
        android:layout_width="156dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/payments"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sttBalance"
        android:layout_width="156dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/balance"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

</LinearLayout>







