<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="30dp"
    android:id="@+id/BottomSheetContainer"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="@string/menu"
        android:gravity="center"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/MyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="15dp"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:text="@string/my_profile"
        android:background="@drawable/grey_underline"
        app:layout_constraintTop_toBottomOf="@+id/ProfileText" />

    <TextView
        android:id="@+id/Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/ic_menu_send"
        android:drawablePadding="15dp"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:text="@string/report_issue"
        android:background="@drawable/grey_underline" />

    <TextView
        android:id="@+id/Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="15dp"
        android:fontFamily="@font/avenirltstd_light"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/ProfileText" />

</LinearLayout>