<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_child_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/grey_underline"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:src="@drawable/credentials"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView"
        android:fontFamily="@font/avenir_regular"
        android:text="@string/platform"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Platform"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imageView"
        android:fontFamily="@font/avenir_regular"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/imageView"
        android:fontFamily="@font/avenir_regular"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="15sp" />


</RelativeLayout>